# SGX

Client/: Makefile  quatro_en
Client/App/: App.cpp
Client/Enclave/: Enclave.edl
Client/Enclave/RoZa/: RoZa.cpp  RoZa.edl  mpir.h  parser.cpp  parser.h
Server/: CMakeLists.txt  README.md
Server/Example/SimpleBoostClient/: CMakeLists.txt  main.cpp
Server/Example/SimpleBoostServer/: CMakeLists.txt  main.cpp  quatro  settings.ini
Server/Source/ServerV2/: CMakeLists.txt  crypto.cpp  crypto.h  elfserver.cpp  elfserver.h  utils.hpp
